--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "consolidate": "^0.14.0",
     "express": "^4.13.4",
-    "handlebars": "^4.0.5"
+    "handlebars": "^4.0.5",
+    "superagent": "^1.8.3"
   }
 }
